--- a/docs/all_in_one.adoc
+++ b/docs/all_in_one.adoc
@@ -17,6 +17,8 @@ include::extensions.adoc[leveloffset=+1]
 
 include::utilities.adoc[leveloffset=+1]
 
+include::parallel_execution.adoc[leveloffset=+1]
+
 include::modules.adoc[leveloffset=+1]
 
 include::release_notes.adoc[leveloffset=+1]
